\name{frenchFISHnews}
\title{News for Package \pkg{frenchFISH}}
\encoding{UTF-8}

\section{Version 0.99.9}{\itemize{
\item
Added an argument to getManualCountsEstimates and getAutomaticCountsEstimates. 
Accordingly returned helper functions getMaxVolumeFrac and getMinVolumeFrac.
}}

\section{Version 0.99.8}{\itemize{
\item
Corrected bug that performed max volume correction for manual spot correction 
rather than average volume correction. Added a mean count estimation as an 
output to getManualCountsEstimates. Removed three unused helper functions,
getMaxVolumeFrac, getMinVolumeFrac, and getVsegFrac.
}}

\section{Version 0.99.7}{\itemize{
\item
Added convertFishalyserCsvToCountMatrix function to convert the CSV count 
output of the FISHalyseR Bioconductor package to a probe count matrix suitable
for frenchFISH's getAutomaticCountsEstimates function. Updated vignette to 
reflect this addition.
}}

\section{Version 0.99.5}{\itemize{
\item
Subscribed to bioc-devel.
}}

\section{Version 0.99.5}{\itemize{
\item
Added seed-setting explanation in vignette and slightly changed the readme.
}}

\section{Version 0.99.4}{\itemize{
\item
Changed accepted input data structure for area probe counts from a dataframe to a matrix.
}}